Fix dark mode for anachrony, chandigarh and mango

--- a/src/css/dark_theme/game.less
+++ b/src/css/dark_theme/game.less
@@ -501,6 +501,10 @@ a#pageheader_buy {
   color: var(--light-80);
 }
 
+.fatalerror {
+  color: var(--light-80);
+}
+
 /* Tisaac games settings */
 
 #player_config #help-mode-switch .label,
