--- a/src/css/games/anachrony.less
+++ b/src/css/games/anachrony.less
@@ -9,4 +9,17 @@ html[data-theme=dark] {
 	.anaicon {
 		filter: var(--highlight-min) !important;
 	}
+
+	.selectable {
+		filter: drop-shadow(5px 5px 2px var(--color-hex-selectable)) !important;
+	}
+
+	.selectable.bgabutton,
+	.innervortex {
+		filter: none !important;
+	}
+
+	.selectable.selected {
+		filter: drop-shadow(5px 5px 2px #ffee00) !important;
+	}
 }
